--- a/semver_example/semver_example.csproj
+++ b/semver_example/semver_example.csproj
@@ -1,12 +1,31 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <Copyright>Copyright © 2018</Copyright>
-    <Company>Magenic</Company>
-    <Description>Semantic Versioning Demo</Description>
-    <FileVersion>1.2.4.6</FileVersion>
-  </PropertyGroup>
+	<PropertyGroup>
+		<!-- Targeting -->
+		<OutputType>Exe</OutputType>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<IsPackable>false</IsPackable>
+
+		<!-- Company Authors, Copyright -->
+		<Company>Stuart Williams</Company>
+		<Authors>Stuart Williams</Authors>
+		<Copyright>2019-2021 Stuart Williams</Copyright>
+
+		<!-- This is set by the CI build pipeline, do not set in CSPROJ except for testing -->
+		<AssemblyVersion>2.0.1.3</AssemblyVersion>
+		<FileVersion>2.0.1.3</FileVersion>
+
+		<!-- This should only be set for NuGets and should match Informational Version -->
+		<Version>2.0.1</Version>
+
+		<!-- These are the Semantic Version (major.minor.patch) that the team should manage -->
+		<InformationalVersion>2.0.1</InformationalVersion>
+		<!-- Use the bulleted form with the Semantic Version -->
+		<Description>
+			2.0.1 Updated with new Semantics
+			1.0.0 Semantic Versioning Demo
+		</Description>
+
+	</PropertyGroup>
 
 </Project>
